Expand testing of JVMTI GetThreadStateTest to more pinned cases